@@ -1,3 +1,11 @@
+Tue Nov 04 00:19:54 2008  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: fix warning
+
+	* src/graphing.c: fix warning, handle error on print command, fix
+	  bad labling of functions if some functions cannot be parsed or are
+	  empty.
+
 Mon Sep 22 23:23:51 2008  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/funclib.c: rename parse/eval to Parse and Evaluate to be
